fix permgen space issue